--- a/templates/home.html
+++ b/templates/home.html
@@ -10,5 +10,7 @@
     {% else %}
         <p>You are not logged in.</p>
         <a href="{% url 'login' %}">Log In</a>
+        &nbsp;&nbsp;
+        <a href="{% url 'signup' %}">Sign Up</a>
     {% endif %}
 {% endblock content %}
