dealing with static files and add bootstrap and crispy forms

--- a/templates/home.html
+++ b/templates/home.html
@@ -1,16 +1,8 @@
 {% extends "_base.html" %}
-
+{% load static %}
 {% block title %}Home{% endblock title %}
 
 {% block content %}
-    <h1>Welcome to the home page!</h1>
-    {% if user.is_authenticated %}
-        <p>Hi {{ user.email }}.</p>
-        <p><a href="{% url 'logout' %}">Log Out</a></p>
-    {% else %}
-        <p>You are not logged in.</p>
-        <a href="{% url 'login' %}">Log In</a>
-        &nbsp;&nbsp;
-        <a href="{% url 'signup' %}">Sign Up</a>
-    {% endif %}
+    <h1>Welcome {{user.username}}</h1>
+    <img class="bookcover" src="{% static 'images/3sfoor.jpg' %}" alt="bookcover">
 {% endblock content %}
