--- a/templates/_base.html
+++ b/templates/_base.html
@@ -1,4 +1,5 @@
 {% load static %}
+{% load socialaccount %}
 <!DOCTYPE html>
 <html>
     <head>
@@ -30,6 +31,9 @@
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="{% url 'account_signup' %}">Sign Up</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="{% provider_login_url 'github' %}">Continue with github</a>
                     </li>
                     {% endif %}
                 </ul>
