add google oauth

--- a/templates/_base.html
+++ b/templates/_base.html
@@ -35,6 +35,9 @@
                     <li class="nav-item">
                         <a class="nav-link" href="{% provider_login_url 'github' %}">Continue with github</a>
                     </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="{% provider_login_url 'google' %}">Continue with google</a>
+                    </li>
                     {% endif %}
                 </ul>
                 </div>
