--- a/templates/_base.html
+++ b/templates/_base.html
@@ -48,7 +48,7 @@
             </div>
         </nav>
         <div class="container">
-            {% block content %}5555{% endblock content %}
+            {% block content %}{% endblock content %}
         </div>
         <!-- Bootstrap js-->
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
