--- a/templates/books/book_detail.html
+++ b/templates/books/book_detail.html
@@ -7,5 +7,13 @@
         <h2><a href="">{{ book.title }}</a></h2>
         <p>By {{ book.author }}</p>
         <p>{{ book.price }}</p>
+        <div>
+            <h3>Reviews</h3>
+            <ul>
+                {% for review in book.reviews.all %}
+                    <li>{{ review.review }} ({{ review.author }})</li>
+                {% endfor %}
+            </ul>
+        </div>
     </div>
 {% endblock content %}
